NProjects/NVisionInspect/vision/NVisionInspectProcessor/header/NVisionInspectProcessorCSharp.h

	/************************** Declare AND Delete **************************/

	__declspec(dllexport) CNVisionInspectProcessor*     CreateNVisionInspectProcessor();
	__declspec(dllexport) void                          DeleteNVisionInspectProcessor(CNVisionInspectProcessor* pProcessor);
	__declspec(dllexport) bool                          Initialize(CNVisionInspectProcessor* pProcessor);
												        
	__declspec(dllexport) bool                          LocatorTool_Train(CNVisionInspectProcessor* pProcessor, int nCamIdx);
												        
	__declspec(dllexport) bool                          LocatorToolSimulator_Train(CNVisionInspectProcessor* pProcessor, int nSimuBuff, int nFrame);
	__declspec(dllexport) bool                          LocatorToolFakeCam_Train(CNVisionInspectProcessor* pProcessor, int nFrame);
	/************************** Operation **************************/

	__declspec(dllexport) bool                          InspectStart(CNVisionInspectProcessor* pProcessor, int nThreadCount, int nCamCount);
												        
	__declspec(dllexport) bool                          InspectStop(CNVisionInspectProcessor* pProcessor, int nCamCount);
	__declspec(dllexport) bool                          Inspect_Simulator(CNVisionInspectProcessor* pProcessor, emCameraBrand camBrand, int nCamIdx);
												        
	__declspec(dllexport) BYTE*                         GetResultBuffer(CNVisionInspectProcessor* pProcessor, int nBuff, int nFrame);
	__declspec(dllexport) BYTE*                         GetResultBuffer_FakeCam(CNVisionInspectProcessor* pProcessor, int nFrame);
	__declspec(dllexport) bool                          LoadSimulatorBuffer(CNVisionInspectProcessor* pProcessor, int nBuff, int nFrame, char* pFilePath);
	__declspec(dllexport) bool                          LoadSimulatorBuffer_FakeCam(CNVisionInspectProcessor* pProcessor, int nFrame, char* pFilePath);
												        
	__declspec(dllexport) BYTE*                         GetSimulatorBuffer(CNVisionInspectProcessor* pProcessor, int nBuff, int nFrame);
	__declspec(dllexport) BYTE*                         GetSimulatorBuffer_FakeCam(CNVisionInspectProcessor* pProcessor, int nFrame);