NProjects/NVisionInspect/vision/NVisionInspectProcessor/header/NVisionInspectProcessor.h

typedef void _stdcall CallbackLogFunc(char* strLogMsg);
typedef void _stdcall CallbackAlarmFunc(char* strAlarmMessage);