NProjects/NVisionInspect/gui/NVisionInspectGUI/Manager/Class/NVisionInspectProcessorDll.cs

using NVisionInspectGUI.Commons;
using NVisionInspectGUI.Models;
using NVisionInspectGUI.Models.FakeCam.Recipe;
using NVisionInspectGUI.Models.FakeCam.Result;
using NVisionInspectGUI.Models.FakeCam.Setting;
using NVisionInspectGUI.Models.Recipe;
using NVisionInspectGUI.Models.Result;
using System;
using System.Collections.Generic;
using System.Linq;
using System.Reflection;
using System.Runtime.InteropServices;
using System.Security.Principal;
using System.Text;
using System.Threading.Tasks;

namespace NVisionInspectGUI.Manager.Class
{
    // Log Message CallBack
    [UnmanagedFunctionPointer(CallingConvention.StdCall)]
    public delegate void CallbackLogFunc([MarshalAs(UnmanagedType.LPStr)] string strLogMsg);

    // Alarm CallBack
    [UnmanagedFunctionPointer(CallingConvention.StdCall)]
    public delegate void CallbackAlarmFunc([MarshalAs(UnmanagedType.LPStr)] string strAlarm);

    // Inspection Compete CallBack
    [UnmanagedFunctionPointer(CallingConvention.StdCall)]
    public delegate void CallbackInsCompleteFunc(int nCamIdx, int bSetting);

    // Locator Train CallBack
    [UnmanagedFunctionPointer(CallingConvention.StdCall)]
    public delegate void CallbackLocatorTrainCompleteFunc(int nCamIdx);

    // Insp Complete Fake Cam CallBack
    [UnmanagedFunctionPointer(CallingConvention.StdCall)]
    public delegate void CallbackInsComplete_FakeCamFunc(int nInspTool);

    // HSV complete train Callback
    [UnmanagedFunctionPointer(CallingConvention.StdCall)]
    public delegate void CallbackHSVTrainCompleteFunc(int nCamIdx);

    public class NVisionInspectProcessorDll
    {
        IntPtr m_NVisionInspectProcessor;

        public static CallbackLogFunc m_RegLogCallback;
        public static CallbackAlarmFunc m_RegAlarmCallback;
        public static CallbackInsCompleteFunc m_RegInsCompleteCallback;
        public static CallbackLocatorTrainCompleteFunc m_RegLocatorTrainCompleteCallback;
        public static CallbackInsComplete_FakeCamFunc m_RegInsComplete_FakeCamCallback;
        public static CallbackHSVTrainCompleteFunc m_RegHsvCompleteCallback;
        public NVisionInspectProcessorDll()
        {
            m_NVisionInspectProcessor = CreateNVisionInspectProcessor();
        }

        #region Init and delete
        /// <summary>
        /// Create a pointer the NVisionInspect processor
        /// </summary>
        /// <returns></returns>
#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static IntPtr CreateNVisionInspectProcessor();


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool Initialize(IntPtr NVisionInspectProcessor);
        public bool Initialize() { return Initialize(m_NVisionInspectProcessor); }


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static void DeleteNVisionInspectProcessor(IntPtr NVisionInspectProcessor);
        public void DeleteNVisionInspectProcessor()
        {
            DeleteNVisionInspectProcessor(m_NVisionInspectProcessor);
        }

        #endregion

        #region Operation
#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool InspectStart(IntPtr NVisionInspectProcessor, int nThreadCount, int nCamCount);
        public bool InspectStart(int nThreadCount, int nCamCount) { return InspectStart(m_NVisionInspectProcessor, nThreadCount, nCamCount); }
        /**********************************
         - Inspection Ready / Start
         - Parameter : Instance Poiter, Thread Count, Camera Count
        **********************************/

#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool InspectStop(IntPtr NVisionInspectProcessor, int nCamCount);
        public bool InspectStop(int nCamCount) { return InspectStop(m_NVisionInspectProcessor, nCamCount); }
        /**********************************
        - Inspection Ready / Start
        - Parameter : Instance Poiter, Camera Count
       **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool Inspect_Simulator(IntPtr NVisionInspectProcessor, int nCamBrand, int nCamIdx);
        public bool Inspect_Simulator(int nCamBrand, int nCamIdx) { return Inspect_Simulator(m_NVisionInspectProcessor, nCamBrand, nCamIdx); }
        /**********************************
         - Inspection Simulator
         - Parameter : Instance Pointer, Camera Brand, Camera Index
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static IntPtr GetResultBuffer(IntPtr NVisionInspectProcessor, int nBuff, int nFrame);
        public IntPtr GetResultBuffer(int nBuff, int nFrame)
        {
            return GetResultBuffer(m_NVisionInspectProcessor, nBuff, nFrame);
        }
        /**********************************
         - Get Result Buffer
         - Parameter : Instance Pointer, Buffer Index, Frame Index
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static IntPtr GetResultBuffer_FakeCam(IntPtr NVisionInspectProcessor, int nFrame);
        public IntPtr GetResultBuffer_FakeCam(int nFrame)
        {
            return GetResultBuffer_FakeCam(m_NVisionInspectProcessor, nFrame);
        }
        /**********************************
         - Get Result Buffer for Fake Camera
         - Parameter : Instance Pointer, Frame Index
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static IntPtr GetSimulatorBuffer(IntPtr NVisionInspectProcessor, int nBuff, int nFrame);
        public IntPtr GetSimulatorBuffer(int nBuff, int nFrame)
        {
            return GetSimulatorBuffer(m_NVisionInspectProcessor, nBuff, nFrame);
        }
        /**********************************
         - Get Simulator Buffer
         - Parameter : Instance Pointer, Buffer Index, Frame Index
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static IntPtr GetSimulatorBuffer_FakeCam(IntPtr NVisionInspectProcessor, int nFrame);
        public IntPtr GetSimulatorBuffer_FakeCam(int nFrame)
        {
            return GetSimulatorBuffer_FakeCam(m_NVisionInspectProcessor, nFrame);
        }
        /**********************************
        - Get Simulator Buffer for Fake Camera
        - Parameter : Instance Pointer, Frame Index
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool LoadSimulatorBuffer(IntPtr NVisionInspectProcessor, int nBuff, int nFrame, [MarshalAs(UnmanagedType.LPStr)] string filePath);
        public bool LoadSimulatorBuffer(int nBuff, int nFrame, [MarshalAs(UnmanagedType.LPStr)] string filePath) { return LoadSimulatorBuffer(m_NVisionInspectProcessor, nBuff, nFrame, filePath); }
        /**********************************
       - Load Simulator Buffer
       - Parameter : Instance Pointer, Buffer Index, Frame Index
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool LoadSimulatorBuffer_FakeCam(IntPtr NVisionInspectProcessor, int nFrame, [MarshalAs(UnmanagedType.LPStr)] string filePath);
        public bool LoadSimulatorBuffer_FakeCam(int nFrame, [MarshalAs(UnmanagedType.LPStr)] string filePath) { return LoadSimulatorBuffer_FakeCam(m_NVisionInspectProcessor, nFrame, filePath); }
        /**********************************
       - Load Simulator Buffer for Fake Camera
       - Parameter : Instance Pointer, Frame Index, File Path
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool LocatorTool_Train(IntPtr NVisionInspectProcessor, int nCamIdx);
        public bool LocatorTool_Train(int nCamIdx) { return LocatorTool_Train(m_NVisionInspectProcessor, nCamIdx); }
        /**********************************
       - Train Locator Tool
       - Parameter : Instance Pointer, Camera Index
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool LocatorToolSimulator_Train(IntPtr NVisionInspectProcessor, int nSimuBuff, int nFrame);
        public bool LocatorToolSimulator_Train(int nSimuBuff, int nFrame) { return LocatorToolSimulator_Train(m_NVisionInspectProcessor, nSimuBuff, nFrame); }
        /**********************************
       - Train Locator Tool Simulator
       - Parameter : Instance Pointer, Simulator Buffer Index, Frame Index
        **********************************/


#if DEBUG
        [DllImport("NVisionInspectProcessor_Debug64.dll", CallingConvention = CallingConvention.Cdecl)]
#else
        [DllImport("NVisionInspectProcessor_Release64.dll", CallingConvention = CallingConvention.Cdecl)]
#endif
        extern private static bool LocatorToolFakeCam_Train(IntPtr NVisionInspectProcessor, int nFrame);
        public bool LocatorToolFakeCam_Train(int nFrame) { return LocatorToolFakeCam_Train(m_NVisionInspectProcessor, nFrame); }
        /**********************************
       - Train Locator Tool Fake Camera
       - Parameter : Instance Pointer, Frame Index
        **********************************/

